"""
Supercomputer Orchestration System
Manages distributed GPU clusters and petascale computing
"""

import asyncio
from typing import Dict, List, Tuple, Optional, Any
from dataclasses import dataclass
import numpy as np
import torch
import kubernetes
from kubernetes import client, config
import ray
from ray.util.placement_group import placement_group
import dask.distributed
from dask_cuda import LocalCUDACluster
import horovod.torch as hvd
import fabric
import psutil
import GPUtil
import yaml
import time
from prometheus_client import Gauge, Counter, Histogram


# Prometheus metrics
gpu_utilization_gauge = Gauge('supercomputer_gpu_utilization', 'GPU utilization percentage', ['node', 'gpu'])
node_status_gauge = Gauge('supercomputer_node_status', 'Node status (1=healthy, 0=unhealthy)', ['node'])
interconnect_bandwidth_gauge = Gauge('supercomputer_interconnect_bandwidth', 'Interconnect bandwidth in Gbps', ['source', 'target'])
compute_pflops_gauge = Gauge('supercomputer_compute_pflops', 'Computing power in PFLOPS')
job_latency_histogram = Histogram('supercomputer_job_latency', 'Job execution latency in seconds')
job_counter = Counter('supercomputer_jobs_total', 'Total number of jobs processed', ['status'])


@dataclass
class ComputeNode:
    """Represents a compute node in the supercomputer cluster"""
    hostname: str
    ip_address: str
    gpu_count: int
    gpu_type: str  # e.g., "A100", "H100", "V100"
    cpu_cores: int
    memory_gb: int
    storage_tb: float
    interconnect_type: str  # "InfiniBand", "NVLink", "PCIe"
    interconnect_bandwidth_gbps: float
    compute_capability_tflops: float
    status: str = "healthy"
    current_jobs: List[str] = None
    
    def __post_init__(self):
        if self.current_jobs is None:
            self.current_jobs = []
        self.total_tflops = self.compute_capability_tflops * self.gpu_count


@dataclass
class ComputeJob:
    """Represents a distributed compute job"""
    job_id: str
    job_type: str  # "training", "inference", "simulation"
    required_gpus: int
    required_memory_gb: int
    priority: int
    estimated_runtime_hours: float
    checkpoint_interval_minutes: int = 30
    data_parallelism: bool = True
    model_parallelism: bool = False
    pipeline_parallelism: bool = False
    status: str = "pending"
    assigned_nodes: List[str] = None
    
    def __post_init__(self):
        if self.assigned_nodes is None:
            self.assigned_nodes = []


class SupercomputerOrchestrator:
    """
    Orchestrates a neural supercomputer with distributed GPU clusters
    Manages petascale computing workloads across multiple nodes
    """
    
    def __init__(self, config_file: str = "supercomputer_config.yaml"):
        # Load configuration
        with open(config_file, 'r') as f:
            self.config = yaml.safe_load(f)
        
        self.nodes: Dict[str, ComputeNode] = {}
        self.job_queue: List[ComputeJob] = []
        self.active_jobs: Dict[str, ComputeJob] = {}
        self.total_gpus = 0
        self.total_tflops = 0
        
        # Initialize orchestration systems
        self._init_kubernetes()
        self._init_ray_cluster()
        self._init_dask_cluster()
        self._init_monitoring()
        
        # Node discovery and setup
        self._discover_nodes()
        self._setup_interconnects()
        
        # Start orchestration loop
        self.orchestration_task = asyncio.create_task(self._orchestration_loop())
    
    def _init_kubernetes(self):
        """Initialize Kubernetes client for container orchestration"""
        try:
            config.load_incluster_config()
        except:
            config.load_kube_config()
        
        self.k8s_v1 = client.CoreV1Api()
        self.k8s_batch = client.BatchV1Api()
        self.k8s_apps = client.AppsV1Api()
    
    def _init_ray_cluster(self):
        """Initialize Ray for distributed computing"""
        # Initialize Ray with custom configuration
        ray.init(
            address=self.config.get("ray_head_address", "auto"),
            num_cpus=self.config.get("ray_num_cpus", None),
            num_gpus=self.config.get("ray_num_gpus", None),
            object_store_memory=self.config.get("ray_object_store_memory", None),
            dashboard_host="0.0.0.0"
        )
        
        # Create placement groups for GPU affinity
        self.ray_placement_groups = {}
    
    def _init_dask_cluster(self):
        """Initialize Dask for distributed data processing"""
        # Create CUDA cluster for GPU workers
        self.dask_cluster = LocalCUDACluster(
            n_workers=self.config.get("dask_gpu_workers", 8),
            threads_per_worker=1,
            memory_limit="auto",
            device_memory_limit="auto",
            enable_tcp_over_ucx=True,
            enable_infiniband=self.config.get("enable_infiniband", True)
        )
        
        self.dask_client = dask.distributed.Client(self.dask_cluster)
    
    def _init_monitoring(self):
        """Initialize monitoring and metrics collection"""
        # Prometheus metrics server
        from prometheus_client import start_http_server
        start_http_server(9091)
        
        # Performance monitoring thread
        self.monitoring_task = asyncio.create_task(self._monitoring_loop())
    
    def _discover_nodes(self):
        """Discover and register compute nodes"""
        # Kubernetes node discovery
        nodes = self.k8s_v1.list_node()
        
        for node in nodes.items:
            # Get node details
            node_name = node.metadata.name
            node_ip = node.status.addresses[0].address
            
            # Get GPU information from node labels
            gpu_count = int(node.metadata.labels.get("nvidia.com/gpu.count", 0))
            gpu_type = node.metadata.labels.get("nvidia.com/gpu.product", "Unknown")
            
            # Get resource capacity
            capacity = node.status.capacity
            cpu_cores = int(capacity.get("cpu", 0))
            memory_gb = int(capacity.get("memory", "0Ki").rstrip("Ki")) / (1024**2)
            storage_tb = int(capacity.get("ephemeral-storage", "0Ki").rstrip("Ki")) / (1024**3)
            
            # Determine interconnect type
            interconnect_type = self._detect_interconnect(node)
            interconnect_bandwidth = self._measure_interconnect_bandwidth(node_ip)
            
            # Calculate compute capability
            compute_capability = self._calculate_compute_capability(gpu_type, gpu_count)
            
            # Create compute node
            compute_node = ComputeNode(
                hostname=node_name,
                ip_address=node_ip,
                gpu_count=gpu_count,
                gpu_type=gpu_type,
                cpu_cores=cpu_cores,
                memory_gb=memory_gb,
                storage_tb=storage_tb,
                interconnect_type=interconnect_type,
                interconnect_bandwidth_gbps=interconnect_bandwidth,
                compute_capability_tflops=compute_capability
            )
            
            self.nodes[node_name] = compute_node
            self.total_gpus += gpu_count
            self.total_tflops += compute_node.total_tflops
        
        print(f"Discovered {len(self.nodes)} nodes with {self.total_gpus} GPUs")
        print(f"Total compute capacity: {self.total_tflops:.2f} TFLOPS")
    
    def _detect_interconnect(self, node) -> str:
        """Detect the interconnect type for a node"""
        # Check for InfiniBand
        if "infiniband" in node.metadata.labels:
            return "InfiniBand"
        
        # Check for NVLink
        if "nvlink" in node.metadata.labels:
            return "NVLink"
        
        # Default to PCIe
        return "PCIe"
    
    def _measure_interconnect_bandwidth(self, node_ip: str) -> float:
        """Measure interconnect bandwidth between nodes"""
        # Simple bandwidth test using iperf3
        try:
            cmd = f"iperf3 -c {node_ip} -t 5 -J"
            result = subprocess.run(cmd.split(), capture_output=True, text=True)
            data = json.loads(result.stdout)
            bandwidth_gbps = data["end"]["sum_received"]["bits_per_second"] / 1e9
            return bandwidth_gbps
        except:
            # Default bandwidth based on interconnect type
            return 100.0  # Assume 100 Gbps for InfiniBand
    
    def _calculate_compute_capability(self, gpu_type: str, gpu_count: int) -> float:
        """Calculate compute capability in TFLOPS"""
        # GPU compute capabilities (FP32 TFLOPS)
        gpu_tflops = {
            "A100": 19.5,
            "H100": 51.0,
            "V100": 14.0,
            "RTX4090": 82.6,
            "RTX3090": 35.6
        }
        
        tflops_per_gpu = gpu_tflops.get(gpu_type, 10.0)
        return tflops_per_gpu * gpu_count
    
    def _setup_interconnects(self):
        """Setup high-performance interconnects"""
        # Configure InfiniBand
        for node_name, node in self.nodes.items():
            if node.interconnect_type == "InfiniBand":
                self._configure_infiniband(node)
        
        # Setup NVLink topology
        self._setup_nvlink_topology()
        
        # Configure RDMA
        self._configure_rdma()
    
    def _configure_infiniband(self, node: ComputeNode):
        """Configure InfiniBand for a node"""
        # SSH to node and configure IB
        ssh = fabric.Connection(
            host=node.ip_address,
            user=self.config.get("ssh_user", "admin"),
            connect_kwargs={"key_filename": self.config.get("ssh_key_path")}
        )
        
        # Configure IB interfaces
        ssh.run("sudo ibconfig")
        ssh.run("sudo opensm")  # Start subnet manager if needed
    
    def _setup_nvlink_topology(self):
        """Setup NVLink topology for GPU communication"""
        # Configure NVLink bridges between GPUs
        for node_name, node in self.nodes.items():
            if node.gpu_count > 1:
                # Setup NVLink topology
                nvlink_config = {
                    "topology": "all-to-all",
                    "bandwidth_gbps": 600,  # NVLink 3.0
                    "latency_ns": 10
                }
                self._apply_nvlink_config(node, nvlink_config)
    
    async def submit_job(self, job: ComputeJob) -> str:
        """Submit a job to the supercomputer"""
        job.status = "queued"
        self.job_queue.append(job)
        
        # Find suitable nodes
        assigned_nodes = self._find_suitable_nodes(job)
        
        if assigned_nodes:
            job.assigned_nodes = assigned_nodes
            job.status = "running"
            self.active_jobs[job.job_id] = job
            
            # Launch distributed job
            await self._launch_distributed_job(job)
            
            job_counter.labels(status="submitted").inc()
            return job.job_id
        else:
            job.status = "pending"
            job_counter.labels(status="queued").inc()
            return f"Job {job.job_id} queued - insufficient resources"
    
    def _find_suitable_nodes(self, job: ComputeJob) -> List[str]:
        """Find suitable nodes for a job based on requirements"""
        suitable_nodes = []
        required_gpus = job.required_gpus
        
        # Sort nodes by available resources
        available_nodes = sorted(
            self.nodes.values(),
            key=lambda n: (n.gpu_count - len(n.current_jobs), n.total_tflops),
            reverse=True
        )
        
        for node in available_nodes:
            if node.status == "healthy":
                available_gpus = node.gpu_count - len(node.current_jobs)
                if available_gpus > 0:
                    suitable_nodes.append(node.hostname)
                    required_gpus -= min(available_gpus, required_gpus)
                    
                    if required_gpus <= 0:
                        break
        
        return suitable_nodes if required_gpus <= 0 else []
    
    async def _launch_distributed_job(self, job: ComputeJob):
        """Launch a distributed job across multiple nodes"""
        # Create Ray placement group for GPU affinity
        bundles = []
        for node_name in job.assigned_nodes:
            node = self.nodes[node_name]
            bundles.append({"GPU": node.gpu_count, "CPU": node.cpu_cores})
        
        placement_group = ray.util.placement_group(
            bundles=bundles,
            strategy="STRICT_SPREAD"
        )
        
        ray.get(placement_group.ready())
        
        # Launch distributed training/inference
        if job.job_type == "training":
            await self._launch_distributed_training(job, placement_group)
        elif job.job_type == "inference":
            await self._launch_distributed_inference(job, placement_group)
        else:
            await self._launch_simulation(job, placement_group)
    
    async def _launch_distributed_training(self, job: ComputeJob, placement_group):
        """Launch distributed training job"""
        # Create Horovod configuration
        hvd_config = {
            "np": job.required_gpus,
            "hosts": ",".join([f"{node}:8" for node in job.assigned_nodes])
        }
        
        # Launch training script with Ray
        @ray.remote(num_gpus=1, placement_group=placement_group)
        class DistributedTrainer:
            def __init__(self, rank, world_size):
                hvd.init()
                self.rank = rank
                self.world_size = world_size
                torch.cuda.set_device(hvd.local_rank())
            
            def train(self, config):
                # Initialize model
                from aiq.neural.distributed_neural_computer import DistributedNeuralComputer
                model = DistributedNeuralComputer(**config["model_params"])
                
                # Distributed training loop
                model.train_distributed(
                    train_loader=config["train_loader"],
                    optimizer=config["optimizer"],
                    num_epochs=config["num_epochs"]
                )
                
                return model.state_dict()
        
        # Launch workers
        trainers = [
            DistributedTrainer.remote(i, job.required_gpus)
            for i in range(job.required_gpus)
        ]
        
        # Start training
        results = ray.get([trainer.train.remote(job.config) for trainer in trainers])
        
        # Save results
        self._save_job_results(job, results)
    
    async def _orchestration_loop(self):
        """Main orchestration loop"""
        while True:
            # Process job queue
            await self._process_job_queue()
            
            # Monitor active jobs
            await self._monitor_active_jobs()
            
            # Update node status
            await self._update_node_status()
            
            # Rebalance workloads
            await self._rebalance_workloads()
            
            await asyncio.sleep(10)
    
    async def _monitoring_loop(self):
        """Monitoring and metrics collection loop"""
        while True:
            # Collect GPU metrics
            for node_name, node in self.nodes.items():
                gpu_utils = self._get_gpu_utilization(node)
                for i, util in enumerate(gpu_utils):
                    gpu_utilization_gauge.labels(node=node_name, gpu=str(i)).set(util)
                
                # Node health
                node_health = 1 if node.status == "healthy" else 0
                node_status_gauge.labels(node=node_name).set(node_health)
            
            # Interconnect metrics
            for source_node in self.nodes:
                for target_node in self.nodes:
                    if source_node != target_node:
                        bandwidth = self._measure_interconnect_bandwidth(
                            self.nodes[target_node].ip_address
                        )
                        interconnect_bandwidth_gauge.labels(
                            source=source_node,
                            target=target_node
                        ).set(bandwidth)
            
            # Total compute power
            total_pflops = self.total_tflops / 1000
            compute_pflops_gauge.set(total_pflops)
            
            await asyncio.sleep(30)
    
    def _get_gpu_utilization(self, node: ComputeNode) -> List[float]:
        """Get GPU utilization for a node"""
        try:
            ssh = fabric.Connection(host=node.ip_address)
            result = ssh.run("nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits")
            utils = [float(u) for u in result.stdout.strip().split('\n')]
            return utils
        except:
            return [0.0] * node.gpu_count
    
    async def scale_cluster(self, target_nodes: int):
        """Scale the cluster up or down"""
        current_nodes = len(self.nodes)
        
        if target_nodes > current_nodes:
            # Scale up
            await self._scale_up(target_nodes - current_nodes)
        elif target_nodes < current_nodes:
            # Scale down
            await self._scale_down(current_nodes - target_nodes)
    
    async def _scale_up(self, num_nodes: int):
        """Scale up the cluster by adding nodes"""
        # Create new node deployments in Kubernetes
        for i in range(num_nodes):
            node_name = f"compute-node-{len(self.nodes) + i}"
            
            # Create node deployment
            deployment = client.V1Deployment(
                metadata=client.V1ObjectMeta(name=node_name),
                spec=client.V1DeploymentSpec(
                    replicas=1,
                    selector=client.V1LabelSelector(
                        match_labels={"app": "compute-node"}
                    ),
                    template=client.V1PodTemplateSpec(
                        metadata=client.V1ObjectMeta(
                            labels={"app": "compute-node"}
                        ),
                        spec=client.V1PodSpec(
                            containers=[
                                client.V1Container(
                                    name="compute",
                                    image=self.config.get("compute_node_image"),
                                    resources=client.V1ResourceRequirements(
                                        limits={
                                            "nvidia.com/gpu": self.config.get("gpus_per_node", 8),
                                            "memory": f"{self.config.get('memory_per_node', 512)}Gi",
                                            "cpu": self.config.get("cpus_per_node", 64)
                                        }
                                    )
                                )
                            ]
                        )
                    )
                )
            )
            
            self.k8s_apps.create_namespaced_deployment(
                namespace="default",
                body=deployment
            )
        
        # Wait for nodes to be ready
        await asyncio.sleep(60)
        
        # Rediscover nodes
        self._discover_nodes()
    
    def get_cluster_status(self) -> Dict[str, Any]:
        """Get current cluster status"""
        return {
            "total_nodes": len(self.nodes),
            "total_gpus": self.total_gpus,
            "total_pflops": self.total_tflops / 1000,
            "active_jobs": len(self.active_jobs),
            "queued_jobs": len(self.job_queue),
            "node_status": {
                node_name: node.status
                for node_name, node in self.nodes.items()
            },
            "gpu_utilization": {
                node_name: self._get_gpu_utilization(node)
                for node_name, node in self.nodes.items()
            }
        }


# Example configuration file format
EXAMPLE_CONFIG = """
# Supercomputer configuration
cluster_name: neural-supercomputer
ray_head_address: ray://head-node:10001
dask_gpu_workers: 32
enable_infiniband: true
compute_node_image: nvcr.io/nvidia/pytorch:23.10-py3
gpus_per_node: 8
memory_per_node: 512
cpus_per_node: 64
ssh_user: admin
ssh_key_path: /home/admin/.ssh/id_rsa

# Network configuration
interconnect:
  type: infiniband
  bandwidth_gbps: 200
  topology: fat-tree

# Storage configuration
storage:
  type: lustre
  capacity_pb: 10
  bandwidth_gbps: 500

# Monitoring configuration
monitoring:
  prometheus_endpoint: http://prometheus:9090
  grafana_endpoint: http://grafana:3000
  alert_email: admin@supercomputer.ai
"""